--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -48,6 +48,11 @@
 \usepackage{adjustbox}%nalipour
 \usepackage{pifont} %nalipour
 
+% \usepackage{biblatex}
+
+% \bibliography{refs}
+% \bibliographystyle{plain}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------------------------------------------------------------------------------------
