[presentation] After Günther's comments+CLIC rehearsal

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -152,26 +152,35 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
     %   \includegraphics[width=0.2\textwidth]{figures/logo_clic.pdf}
     % }
 
-    \begin{columns}
-      \column{0.2\textwidth}
-      \centering
-      \includegraphics[width=0.5\textwidth]{figures/logo_cern.pdf}
-      \column{0.6\textwidth}
-      \column{0.2\textwidth}
-      \centering
-      \includegraphics[width=0.6\textwidth]{figures/logo_clic.pdf}
-    \end{columns}
+    % \begin{columns}
+    %   \column{0.2\textwidth}
+    %   \centering
+    %   \includegraphics[width=0.5\textwidth]{figures/logo_cern.pdf}
+    %   \column{0.6\textwidth}
+    %   \column{0.2\textwidth}
+    %   \centering
+    %   \includegraphics[width=0.6\textwidth]{figures/logo_clic.pdf}
+    % \end{columns}
 
-    \vspace{1.3cm}
+    \vspace{3cm}
     \titlepage
 
 
-    \vspace{-0.2cm}
 
+    \vspace{-1cm}
     \begin{columns}
+
       \column{0.25\textwidth}
       \centering
       \includegraphics[width=\textwidth]{figures/ETHZ_logo.pdf}
+      \begin{columns}
+        \column{0.5\textwidth}
+        \centering
+        \includegraphics[width=0.8\textwidth]{figures/logo_cern.pdf}
+        \column{0.5\textwidth}
+        \centering
+        \includegraphics[width=0.8\textwidth]{figures/logo_clic.pdf}
+      \end{columns}
       \column{0.32\textwidth}
       \column{0.43\textwidth}
       \scriptsize{
